# GTKWineWrapper

./: README.md  meson.build  org.paczos.TestAppGTK4.json
data/: meson.build  org.paczos.TestAppGTK4.appdata.xml.in  org.paczos.TestAppGTK4.desktop.in  org.paczos.TestAppGTK4.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  testapp.gresource.xml  testapp.in  window.py  window.ui
